--- a/code/css/index.css
+++ b/code/css/index.css
@@ -48,6 +48,12 @@ header {
     padding: 0 40px;
     font-size: 12px;
     letter-spacing: 3px;
+    position: fixed;
+    z-index: 2;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 header img {
@@ -62,6 +68,11 @@ header ul {
 
 header a {
     color: gray;
+    transition: color .3s;  
+}
+
+header a:hover {
+    color: white;
 }
 
 header a.active {
@@ -81,7 +92,101 @@ header a.active::after {
     background-color: #ff671f;
 }
 
+.nav-toggle {
+    flex-direction: column;
+    gap: 8px;
+    background-color: transparent;
+    align-items: end;
+    display: none;
+}
+
+.nav-toggle.active {
+    margin-top: 12px;
+}
+
+.nav-toggle span {
+    background-color: white;
+    height: 2px;
+    width: 16px;
+    transition: transform .4s;
+}
+
+.nav-toggle .first {
+    width: 28px;
+}
+
+.nav-toggle .second.active {
+    transform: rotate(45deg) translate(-6px, -8px);
+    width: 18px;
+}
+
+.nav-toggle .first.active {
+    transform: rotate(-45deg);
+    width: 18px;
+}
+
+/************* Menú *************/
+.menu {
+    position: fixed;
+    bottom: 0;
+    z-index: 2;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 60px);
+    background-color: black;
+    padding: 0 20px;
+    transition: transform .5s;
+}
+
+.menu.active {
+    transform: translateX(-100%);
+}
+
+
+.menu ul {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    top: 50%;
+    transform: translateY(calc(-50% - 30px));
+    font-size: 20px;
+}
+
+.menu a {
+    position: relative;
+}
+
+.menu a.active::after {
+    position: absolute;
+    top: 40%;
+    right: 0;
+    left: 0;
+    background-color: #ff671f;
+    content: "";
+    transition: transform 200ms;
+    height: 4px;
+    border-radius: 4px;
+    transform-origin: center left;
+}
+
+.menu .footer {
+    position: absolute;
+    width: calc(100% - 40px);
+    bottom: 30px;   
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu .footer .redes a {
+    margin-left: 20px;
+}
+
 /************ Cr7 **************/
+.cr7 {
+    padding-top: 60px;
+}
+
 .container {
     display: flex;
     width: 100%;
@@ -100,6 +205,7 @@ header a.active::after {
     font-family: "l";
     font-size: 12px;
     position: relative;
+    overflow: hidden;
 }
 
 .box:hover {
@@ -110,8 +216,19 @@ header a.active::after {
     filter: none;
 }
 
+.box:hover > video {
+    filter: none;
+    width: 100%;
+}
+
 .box:first-child {
     flex: 1.4;
+}
+
+.box video {
+    position: absolute;
+    filter: grayscale(.7);
+    height: 100%;
 }
 
 .box img.bg {
@@ -165,27 +282,34 @@ header a.active::after {
 /************* Slider **************/
 .slider {
     width: 100%;
-    height: 500px;
+    margin-top: 80px;
     position: relative;
+    overflow: hidden;
+}
+
+.slider p {
+    position: absolute;
+    padding: 50px 0 0 30px;
+    color: #ff671f;
+    text-transform: uppercase;
+    font-size: 22px;
+    z-index: 1;
 }
 
 .sliderMove {
     display: flex;
-    width: 400%;
+    width: 500%;
     height: 100%;
     transition: transform 1s;
 }
 
 .sliderMove div {
     height: 100%;
-    width: 25%;
-    background-color: lightcoral;
-    border: 2px solid black
+    width: 20%;
 }
 
 .sliderMove video {
     width: 100%;
-    height: 100%;
 }
 
 .slider .bars {
@@ -200,8 +324,14 @@ header a.active::after {
 
 .slider .bars div {
     flex: 1;
-    border-top: 2px solid white;
+    border-top: 2px solid #b9b9b9;
+    transition: flex .3s;
     cursor: pointer;
+}
+
+.slider .bars div:first-child {
+    flex: 2;
+    border-color: white;   
 }
 
 /************** Video ***************/
@@ -209,7 +339,6 @@ header a.active::after {
     position: relative;
     width: 100%;
     cursor: pointer;
-    margin: 80px 0;
 }
 
 .video video {
@@ -235,7 +364,6 @@ header a.active::after {
 
 @keyframes scale {
     100% {
-        /* transform: ; */
         transform: scale(1.1) translate(-50%, -50%);
     }
 }
@@ -293,8 +421,8 @@ header a.active::after {
 }
 
 .subscription input[type="checkbox"] {
-    opacity: 0;
-    cursor: pointer;
+        cursor: pointer;
+    margin-right: 7px;
 }
 
 .subscription input[type="text"] {
@@ -416,4 +544,148 @@ footer a img {
 
 footer a img:hover {
     opacity: 1  ;
+}
+
+/*************** Querys ****************/
+
+@media (max-width: 1100px) {
+    /************ cr7 ************/
+    .box:nth-child(4) {
+        display: none;
+    }
+
+    /*********** Subscription ************/
+    .subscription {
+        padding: 100px 10%;
+    }
+
+    .subscription .text {
+        width: 100%;
+        padding: 60px 100px;
+    }
+
+    /********** Partners **********/
+    .partners {
+        width: 85%;
+    }
+}
+
+@media (max-width: 1000px) {
+    /************ cr7 ************/
+    .box:first-child {
+        flex: 1;
+    }
+
+    .box:nth-child(3) {
+        display: none;
+    }
+
+    /********* Header *********/
+    .nav-toggle {
+        display: flex;
+    }
+ 
+    header {
+        padding: 0 20px;
+    }
+
+    header ul {
+        display: none;
+    }
+
+    /************* Cr7 *************/
+    .container {
+        padding: 0 20px;
+    }
+}
+
+@media (max-width:750px) {
+    /************* Slider **************/
+    .sliderMove video {
+        object-fit: cover;
+        height: 100%;
+    }
+
+    .slider {
+        height: 700px;
+    }
+
+    /************** Video ****************/
+    .video {
+        margin-top: 50px;
+    }
+
+    .video video {
+        margin-top: 100px;
+    }
+    
+    .video p {
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .video img {
+        transform: translate(-50%, calc(-50% + 50px));
+    }
+
+    .video span {
+        transform: translate(-50%, calc(-50% + 50px));
+        animation: none;
+    }
+}
+
+@media (max-width: 650px) {
+    /************ cr7 ************/
+    .box:nth-child(2) {
+        display: none;
+    }
+    .box:nth-child(5) {
+        display: none;
+    }
+    .box video {
+        height: auto;
+        object-fit: cover;
+        object-position: bottom;
+    }
+
+    /*********** Subscription ***********/
+    .subscription {
+        gap: 0;
+    }
+
+    .subscription .text {
+        padding: 0;
+        padding-bottom: 60px;
+        background-color: transparent;
+        font-size: 15px;
+    }
+
+    .subscription input[type="text"] {
+        height: 50px;
+    }
+
+    .subscription .text a {
+        height: 50px;
+    }
+
+    /************ Partners *************/
+    .partners {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    /************ Slider *************/
+    .slider {
+        height: 420px;
+    }
+
+    .slider p {
+        padding-top: 25px; 
+    }
+
+    /************ Partneres *************/
+    .partners-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
