--- a/code/css/index.css
+++ b/code/css/index.css
@@ -364,32 +364,31 @@ header a.active::after {
 
 @keyframes scale {
     100% {
-        transform: scale(1.1) translate(-50%, -50%);
+        width: 102px;
+        height: 102px;
+        opacity: 0;
     }
 }
 
 .video span {
     display: block;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    border: 1px solid #ff671f;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #ff671f;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    animation: scale 1s infinite;
+    animation: scale 2.3s infinite;
 }
 
-.video span:nth-child(4) {
-    width: 70px;
-    height: 70px;
-    animation-delay: .2s;
+.video > span:nth-child(4) {
+    animation-delay: .5s;
 }
 
-.video span:nth-child(3) {
-    width: 90px;
-    height: 90px;
+.video > span:nth-child(5) {
+    animation-delay: 1s;
 }
 
 /************** Subscription ***************/
@@ -630,7 +629,6 @@ footer a img:hover {
 
     .video span {
         transform: translate(-50%, calc(-50% + 50px));
-        animation: none;
     }
 }
 
