--- a/code/css/index.css
+++ b/code/css/index.css
@@ -190,7 +190,8 @@ header a.active::after {
 .container {
     display: flex;
     width: 100%;
-    height: 520px;
+    min-height: 520px;
+    height: calc(100svh - 60px);
     padding: 0 40px;
     gap: 10px;
     background-color: black;
